Refactor on .getProjectReport according to refactor of .getPackageReport